[gd_scene load_steps=3 format=2]

[ext_resource path="res://game/Camera.gd" type="Script" id=1]
[ext_resource path="res://sound/zoom.wav" type="AudioStream" id=2]

[node name="MainCamera" type="Camera2D"]
position = Vector2( 961, 540 )
current = true
drag_margin_h_enabled = false
drag_margin_v_enabled = false
script = ExtResource( 1 )

[node name="PositionTween" type="Tween" parent="."]

[node name="ZoomTween" type="Tween" parent="."]

[node name="ZoomSoundPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -5.0
pitch_scale = 0.4
bus = "Effects"

[connection signal="tween_completed" from="PositionTween" to="." method="_on_PositionTween_tween_completed"]
[connection signal="tween_completed" from="ZoomTween" to="." method="_on_ZoomTween_tween_completed"]
